--- a/Gradient Descent.ipynb
+++ b/Gradient Descent.ipynb
@@ -23,7 +23,10 @@
     "\n",
     "> An algorithm is a finite sequence of well-defined, computer-implementable instructions, typically to solve a class of problems or to perform a computation.\n",
     "\n",
-    "The Gradient Descent algorithm is a iterative process to solve a specific problem, where the problem is depends on the application on hands. It is to find the value of $\\theta$ that makes $a_{n+1}$ gets closer and closer to the optimal value on every iteration.\n"
+    "The Gradient Descent algorithm is a iterative process to solve a specific problem, where the problem is depends on the application on hands. The hope is to make $a_{n+1}$ closer to the targeted value in every iteration.\n",
+    "\n",
+    "## How to measure if the algorithm is doing well?\n",
+    "In order to judge if the algorithm is doing well, in other words, to judge if on every iteration that $a_{n+1}$ gets closer to the targeted value, we need a cost function. \n"
    ]
   },
   {
