perceptron added, jupyter module setup

--- a/Gradient Descent.ipynb
+++ b/Gradient Descent.ipynb
@@ -11,6 +11,7 @@
     "\n",
     "- Step: this determines the amount the algorithm moves on the next iteration.\n",
     "- Gradient: this determines the direction that the algorithm should move on the next iteration.\n",
+    "- Cost function: this measures how good the algorithm estimated the target value.\n",
     "\n",
     "In the mathematical form, it is\n",
     "\n",
@@ -26,36 +27,12 @@
     "The Gradient Descent algorithm is a iterative process to solve a specific problem, where the problem is depends on the application on hands. The hope is to make $a_{n+1}$ closer to the targeted value in every iteration.\n",
     "\n",
     "## How to measure if the algorithm is doing well?\n",
-    "In order to judge if the algorithm is doing well, in other words, to judge if on every iteration that $a_{n+1}$ gets closer to the targeted value, we need a cost function. \n"
+    "In order to judge if the algorithm is doing well, in other words, to judge if on every iteration that $a_{n+1}$ gets closer to the targeted value, we need a cost function. This function takes the current estimated value at $n$th iteration, and previous value at $n-1$th iteration and computes the difference. If the difference is large, it means that the algorithm did bad at estimating the value at $n$th iteration, otherwise, it did pretty ok. Once of the key things in this algorithm is to minimize this measure which indicates that the algorithm did well.\n",
+    "\n",
+    "One well known cost function is sum of squared differences, which in mathematicall form is the following.\n",
+    "\n",
+    "$$C = \\frac{1}{N}\\sum_1^N (a_{n+1} - a_n)^2$$\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
