perceptron.py added. this file will have all methods for perceptron algorithm. convergence() function added. this function takes a 2-d matrix array and a 3-d numpy array and tells if all data have been classified or not.

--- a/Perceptron.ipynb
+++ b/Perceptron.ipynb
@@ -53,7 +53,7 @@
     "\n",
     "where $w = (b, w_1, w_2, \\ldots, w_N)$ and $x = (1, x_1, x_2, \\ldots, x_N)$.\n",
     "\n",
-    "The goal of the algorithm is to find $w$ and $b$ so that it classifies binary data properly."
+    "The goal of the algorithm is to find weights, $w$ that classifies given data into correct classes."
    ]
   },
   {
@@ -76,6 +76,7 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import random\n",
+    "import perceptron\n",
     "\n",
     "# [x, y, label]\n",
     "matrix = [\n",
