more explanation added

--- a/Perceptron.ipynb
+++ b/Perceptron.ipynb
@@ -30,30 +30,50 @@
    "outputs": [],
    "source": [
     "# Perceptron\n",
-    "The perceptron is an iterative algorithm that classifies binary separable data. The algorithm takes multiple inputs ($x_i$) and outputs binary data (0 or 1). For each input, there is weights, $w_i$ that indicates how important the input is. The algorithm can be defined as follows in mathematical form. \n",
-    "Let's say there are $N$ number of binary data. Then, it goes\n",
+    "The perceptron is an iterative algorithm that classifies binary separable data. The algorithm takes multiple inputs ($x_i$), the weights, $w_i$ that tells how important the input $x_i$ is and outputs 1 if the sum of $x_i * w_i$ is greater than threshold, $b$. In mathematical form, this can be defined as \n",
+    "$$\n",
+    "   1\\ if\\  \\sum_{i=1}^N w_i * x_i > b, 0\\ otherwise\n",
+    "$$\n",
+    "where $N$ is number of inputs.\n",
+    "\n",
+    "If we move the term $b$ to the other side and define the output as $f(x)$, then it goes\n",
     "$$\n",
     "    f(x) = \n",
     "    \\begin{cases}\n",
-    "        1,\\ \\sum_{i=1}^N x_i * w_i + b \\\\\n",
+    "        1,\\ \\sum_{i=1}^N x_i * w_i + b > 0 \\\\\n",
     "        0,\\ otherwise\n",
     "    \\end{cases}\n",
     "$$\n",
-    "where $x_i$ is input, $w_i$ is the weight and $b$ is the bias that shifts the boundary from the origin.\n",
     "\n",
-    "This equation can be simplified using vector notation. By extending the current dimension to $N+1$, the equation can be defined as follows.\n",
+    "This equation can be simplified using vector notation. By including $b$ as one of the weights, then the above becomes\n",
     "\n",
     "$$ \n",
     "f(x) =\n",
     "\\begin{cases}\n",
     "    1,\\ w \\cdot x  > 0 \\\\\n",
-    "    0,\\ w \\cdot x  \\leq 0\n",
+    "    0, otherwise\n",
     "\\end{cases}\n",
     "$$\n",
     "\n",
-    "where $w = (b, w_1, w_2, \\ldots, w_N)$ and $x = (1, x_1, x_2, \\ldots, x_N)$.\n",
+    "where $w = (b, w_1, w_2, \\ldots, w_N)$ and $x = (1, x_1, x_2, \\ldots, x_N)$. Notice that the dimensionality increased by 1.\n",
     "\n",
-    "The goal of the algorithm is to find weights, $w$ that classifies given data into correct classes.\n",
+    "The goal of the algorithm is to find weights, $w$ that classifies given data into correct classes by going through an iteratie processes.\n",
+    "\n",
+    "## How to find the weights $w$?\n",
+    "In each iteration, the weight vector, $w$ has to be updated so that it classifies more and more data into its class and at the end, $w$ classifies all of the data into the correct class. So it is something like \n",
+    "\n",
+    "$$\n",
+    "    w_{i+1} = w_i + \\Delta w_i\\ ,\\ where\\  0 \\leq i \\leq N-1\n",
+    "$$\n",
+    "\n",
+    "The key here is what is $\\delta w_i$? It has to be related to the current prediction and some quantity of the error (how well did the algorithm predicted). This can actually be defined as follows.\n",
+    "\n",
+    "$$\n",
+    "    \\Delta w_i = \\theta (y - \\hat{y})x_i\n",
+    "$$\n",
+    "where $\\theta$ is learning rate, $\\hat{y}$ is predicted output (0 or 1) at current iteration $i$. The learning rate $\\theta$ is to speed up/slow down the process.\n",
+    "\n",
+    "If we visualize the process, at each iteration, it moves the weights to the closer position to the target. To this fact, $(y - \\hat{y})$ only defines the direction, $-1$ or $1$.\n",
     "\n",
     "## How to draw the boundary line?\n",
     "In order to visualize the classifier, it is good to draw the line (hyperplane) that divides the data. In 2-D, it will be a line, $y = mx + b$.\n",
