--- a/Perceptron.ipynb
+++ b/Perceptron.ipynb
@@ -73,7 +73,7 @@
     "$$\n",
     "where $\\theta$ is learning rate, $\\hat{y}$ is predicted output (0 or 1) at current iteration $i$. The learning rate $\\theta$ is to speed up/slow down the process.\n",
     "\n",
-    "If we visualize the process, at each iteration, it moves the weights to the closer position to the target. To this fact, $(y - \\hat{y})$ only defines the direction, $-1$ or $1$.\n",
+    "If we visualize the process, at each iteration, it moves the weights to the closer position to the target. To this fact, $(y - \\hat{y})$ only defines the direction, $-1$ or $1$ and move the weight vector by $x$.\n",
     "\n",
     "## How to draw the boundary line?\n",
     "In order to visualize the classifier, it is good to draw the line (hyperplane) that divides the data. In 2-D, it will be a line, $y = mx + b$.\n",
@@ -95,7 +95,7 @@
     "\n",
     "Then, we can solve it for $x_0$ and $x_1$.\n",
     "$$\n",
-    "    w_0 + w_1 * x_0 + w_2 * x_1 = 0 \\ =>\\  x_0  = \\frac{-w_2 * x_1 - w_0}{w_1}\n",
+    "    w_0 + w_1 * x_0 + w_2 * x_1 = 0 \\ \\implies \\  x_0  = \\frac{-w_2 * x_1 - w_0}{w_1}\n",
     "$$\n",
     "\n",
     "We can derive $x-intercept$ by setting $x_1=0$, then $x_0 = \\frac{-w_0}{w_1}$. \n",
@@ -103,7 +103,7 @@
     "For $x_1$, we have\n",
     "\n",
     "$$\n",
-    "    w_0 + w_1 * x_0 + w_2 * x_1 = 0 \\ => \\ x_1 = \\frac{-w_1 * x_0 - w_0}{w_2}\n",
+    "    w_0 + w_1 * x_0 + w_2 * x_1 = 0 \\ \\implies \\ x_1 = \\frac{-w_1 * x_0 - w_0}{w_2}\n",
     "$$\n",
     "\n",
     "Then, we get $y-intercept$ by setting $x_0=0$, $x_1 = \\frac{-w_0}{w_2}$.\n",
